# SokobanPlanner

./: .gitignore  .gitmodules  Makefile  README.md  domain.lisp
Maps/: blow_stuff_up.txt  blow_up_walls.txt  dont_blow_up_the_box.txt  move.txt  turn_movable.txt  you_can_only_pull.txt  you_can_only_push.txt
Plans/: blow_stuff_up.lisp.plan  blow_up_walls.lisp.plan  dont_blow_up_the_box.lisp.plan  you_can_only_push.lisp.plan
Problems/: blow_stuff_up.lisp  blow_up_walls.lisp  dont_blow_the_box.lisp  dont_blow_up_the_box.lisp  move.lisp  move.lisp.plan  push_box.lisp  turn_movable.lisp  turn_movable.lisp.plan  you_can_only_pull.lisp  you_can_only_pull.lisp.plan  you_can_only_push.lisp  you_can_only_push.lisp.plan
strips_visualizer/: Cargo.toml
strips_visualizer/src/: main.rs
