[package]
name = "strips_visualizer"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
game_engine = { git = "https://github.com/Grigorii-M/game_engine.git"}
